# sensitive-info-extractor

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md
.cargo/: config.toml
.github/workflows/: automerge-action.yml  build-release.yml  release.yml
src/: lib.rs  main.rs
src/core/: excel_reader.rs  extractor.rs  mod.rs  name_extractor.rs  processor.rs  validator.rs
src/gui/: column_selector.rs  drag_area.rs  file_list.rs  main_window.rs  mod.rs  settings_panel.rs
src/models/: config.rs  extract_result.rs  file_info.rs  mod.rs
src/utils/: file_utils.rs  mod.rs  regex_patterns.rs
tests/: test_extractor.rs  test_validator.rs
